commit to feature/branch-1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<html>
-  <head></head>
-  <body>
-    <p>hello from master.<p>
-  </body>
-</html>
+<html>  <head></head>  <body>    <p>hello from master.<p>    <p>hello from feature/branch-1.</p>  </body></html>
