fix, commit to feature/branch-1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<html>  <head></head>  <body>    <p>hello from master.<p>    <p>hello from feature/branch-1.</p>  </body></html>
+<html>
+  <head></head>
+  <body>
+    <p>hello from master.<p>
+    <p>hello from feature/branch-1.</p>
+  </body>
+</html>
